Fix css alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,3 @@
 .App {
   text-align: center;
 }
-
-.hero {
-  height: 100vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(#181818, 0.6),
-      rgba(#181818, 0.6)
-    ),
-    url(./assets/landing-bg-image.jpg);
-  &__ctaButton {
-    position: absolute;
-    top: 47.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 3.2rem;
-    padding: 0.7rem 2rem;
-    font-size: 1.2rem;
-  }
-}
-
-// register forms
-.login-form {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.register-form-button,
-.login-form-button {
-  width: 100%;
-}
-
-.ant-modal-content {
-  width: 80%;
-  margin: 0 auto !important;
-}
